--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
 		"@remotion/cli": "4.0.4",
 		"@remotion/eslint-config": "4.0.4",
 		"@remotion/renderer": "4.0.4",
-		"@types/express": "^4.17.9",
 		"@types/react": "^17.0.0",
+		"ahooks": "^3.7.8",
 		"buffer": "^6.0.3",
 		"eslint": "^7.15.0",
-		"express": "^4.17.1",
 		"gl-texture2d": "^2.1.0",
 		"gl-transition": "^1.13.0",
 		"gl-transitions": "^1.43.0",
@@ -31,5 +30,9 @@
 		"remotion": "4.0.4",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.9.5"
+	},
+	"devDependencies": {
+		"@types/gl-texture2d": "^2.1.6",
+		"raw-loader": "^4.0.2"
 	}
 }
